--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             </ul>
         </section>
         <section class="experience">
-            <p><span class="icon">&gt;</span> <strong>experience:</strong></p>
+            <p><span class="icon">&gt;</span> <strong>experience</strong></p>
             <ul>
                 <li>researcher @ church lab, harvard medical school (2024)</li>
                 <li>summer analyst @ citi (2023)</li>
@@ -47,14 +47,14 @@
             <p>*lol</p>
         </section>
         <section class="education">
-            <p><span class="icon">&gt;</span> <strong>education:</strong></p>
+            <p><span class="icon">&gt;</span> <strong>education</strong></p>
             <ul>
                 <li>harvard, biomedical engineering & cs (2019 – 2024)</li>
                 <li>cairo american college, international baccalaureate (2016 – 2019)</li>
             </ul>
         </section>
         <section class="other">
-            <p><span class="icon">&gt;</span> <strong>other:</strong></p>
+            <p><span class="icon">&gt;</span> <strong>other</strong></p>
             <ul>
                 <li>co-chair, <a href="https://acharvard.com/" target="_blank">ach24</a></li>
                 <li><a href="https://www.prod.so/" target="_blank">prod</a> cohort 3.0</li>
