--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         <section class="currently">
             <p><span class="icon">&gt;</span> <strong>currently:</strong></p>
             <ul>
-                <li><a href="https://oasys.health/" target="_blank">oasys.health</a>: next generation mental health</li>
+                <p><a href="https://oasys.health/" target="_blank">oasys.health</a>: next generation mental health</p>
             </ul>
         </section>
         <section class="experience">
